--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "goalie-app",
   "version": "0.0.1",
   "description": "Goal tracker app",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
+  "devDependencies": {
+    "react-scripts": "0.7.0"
   },
   "repository": {
     "type": "git",
